Fix formatting so divs have spacing.

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -69,6 +69,7 @@ p {
 
 .row {
   width: 100%;
+  text-align: center;
 }
 
 .sections {
@@ -79,8 +80,12 @@ p {
   border: 1px solid black;
   padding-left: 20px;
   margin: 10px 10px 10px 10px;
+  text-align: left;
+  overflow: hidden;
   /*margin-left:  15px;
-  margin-top: 15px;*/
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-right: 15px;*/
   /*display: inline-block;*/
 
 }
@@ -95,8 +100,11 @@ p {
 
   .col-lg-4 {
     float: left;
-    width: 33%;
-    margin: auto;
+    /*width: 33%;
+    margin: 10px 1px 10px 1px;*/
+    width: 30%;
+    margin: 10px 1.5% 10px 1.5%;
+    /*margin:  auto;*/
   }
   
 }
@@ -109,12 +117,15 @@ p {
     float: left;
   }
   .col-md-6 {
-    width: 50%;
-    margin: auto;
+    width: 48%;
+    /*margin: auto;     width 49% works mostly*/
+    margin: 10px 1% 10px 1%;
+    /*top right bottom left*/
   }
   .col-md-12 {
-    width: 100%;
-    margin: auto;
+    width: 98%;
+    /*margin: auto;   98% was working mostly*/
+    margin: 10px 1% 10px 1%;
   }
 }
 
@@ -126,8 +137,9 @@ p {
   }
 
   .col-sm-12 {
-    width: 100%;
-    margin: auto;
+    width: 96%;
+    /*margin: auto;*/
+    margin: 10px 2% 10px 2%;
   }
 }
 
